Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Nuxt dev/build outputs
 .output
-.data
 .nuxt
 .nitro
 .cache
@@ -10,15 +9,51 @@ dist
 node_modules
 
 # Logs
-logs
-*.log
+*.log*
 
-# Misc
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
 .DS_Store
 .fleet
 .idea
 
 # Local env files
 .env
-.env.*
-!.env.example
+.env.local
+.env.*.local
+
+# Vercel
+.vercel
+
+# Vim swap files
+*.swp
