--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/icon": "^1.13.0",
     "@nuxt/image": "^1.10.0",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "better-sqlite3": "^11.10.0",
     "eslint": "^9.29.0",
     "nuxt": "^3.17.5",
     "vue": "^3.5.16",
